# THE-WAY-TO-THE-FUTURE

./: .gitignore  LICENSE  README.md  future.drawio  temp.url
CPP/: CMakeLists.txt  CppCoreGuide.md  ex_tuple.cc  exception.cpp  hello.cpp  main.cpp  multi_inheritance.cpp  pointer.cc  reference.cpp
CPP/learncpp/: cast.cpp  class-template.cpp  class.cpp  ctad.cpp  exp.cpp  func.cpp  goto.cpp  struct.cpp  switch.cpp
CPP/primer/ch01/: 1.10.cpp  1.11.cpp  1.12.cpp  1.14.cpp  1.16.cpp  1.19.cpp  1.23.cpp  1.3.cpp  1.4.cpp  1.5.cpp  1.6.cpp  1.8.cpp  1.9.cpp  Sales_item.h  ex1.cpp  ex2.cpp  ex3-while.cpp  ex4-for.cpp  ex5-flow.cpp  ex6-if.cpp  ex7-class.cpp  ex8-book.cpp  main.cpp
CPP/primer/ch02/: 2.36.cpp  2.37.cpp  Sales_data.h  ex-alias.cpp  ex-decltype.cpp  ex-sales-data.cpp
CPP/primer/ch03/: ex-getline.cpp  ex-multidimension.cpp  ex-pointer-arithmetic.cpp  ex-string.cpp  ex-using.cpp  main.cpp
CPP/primer/ch04/: ex-assign.cpp  ex-bitwise.cpp  ex-cast.cpp  ex-conversion.cpp  ex-dot.cpp  ex-order.cpp  ex-parentheses.cpp  ex-short-circuit.cpp  ex-sizeof.cpp
CPP/primer/ch05/: ex-ifelse.cpp  ex-jump.cpp  ex-statement.cpp  ex-switch.cpp
CPP/primer/ch06/: ex-array.cpp  ex-func.cpp  ex-overloaded.cpp  ex-pass-by-reference.cpp  ex-pass-by-value.cpp  ex-varying.cpp
CPP/primer/ch07/: Sales_data.h  ex-adt.cpp  ex-clz.cpp  ex-constructor.cpp  ex-static.cpp  main.cpp
CPP/primer/ch08/: ex-io.cpp  ex-string.cpp
CPP/primer/ch09/: ex-container.cpp  ex-operation.cpp
CPP/primer/ch10/: ex-generic-algo.cpp
CPP/primer/ch11/: ex-associative-container.cpp
CPP/primer/ch12/: ex-allocator.cpp  ex-array.cpp  ex-dynamic.cpp  ex-new-free.cpp  ex-unique.cpp
CPP/primer/ch13/: ex-copy.cpp
CPP/primer/ch14/: ex-operator-overloading.cpp
CPP/primer/ch15/: ex-abs.cpp  main.cpp
CPP/primer/ch16/: crtp.cpp  main.cpp
CPP/primer/ch17/: ex-bitset.cpp  ex-random.cpp  ex-regx.cpp  ex-tuple.cpp
CPP/primer/ch18/: ex-exception-handling .cpp
CleanCode/: HtmlUtil.after.java  HtmlUtil.java  clean.md
CleanCode/clean/: HtmlUtil.after.java  HtmlUtil.java  Switch.java
CleanCode/design-pattern/: startup.md
Collection/: batchUpdate.org~
GO/: hello.go
GUAVA/: pom.xml
JAVA-BASIC/: AccessAndNonAccessModifiers.org  AccessAndNonAccessModifiers.org~  ClassInitializationSequence.java  ClassInitializationSequence.java~  ClassInitializationSequence.org~  CompletableFutureVsParallelStream.java  EqualsVsHashCode.java  EuqalsAndHashcode.org~  FinalKeyWord.java  FinalKeyWord.org  OOP.org  OOP.org~  StaticKeyword.java  StaticKeyword.org  StaticKeyword.org~  StringDemo.java  StringDemo.java~  TryCatchFinallyDemo.java  pom.xml
JAVA-BASIC/001_objects/: DataOnly.java  DataOnly.java~  EX1.java  EX1.java~  EX2.java  (+9 more)
JVM/: JavaVirtualMachine.org  JavaVirtualMachine.org~  MemoryModel.org  MemoryModel.org~
Linux/: Linux.org  What-Is-Linux.org  telnet.org  telnet.org~  vitualbox.org
Mysql/: sql_mode.org  sql_mode.org~
PY/: hello.py
Redis/: Redis.org  lock.py
Refactor/: package-lock.json  package.json
Scheduler/: pom.xml
algorithms/: pom.xml
go/: A.go  go.mod  go.sum  goroutine.go  main.communication.go  main.func.go  main.generic.go  main.gin.go  main.go  main.web.go  reflect.ipynb  select.go  simpleChannel.go  simpleGo.go  tree.go
js/: call_vs_apply.js  closure.js  copy.js  generator.js  let_vs_var.js  macro_and_micro.js  micro-macro.js  mostly-adequate-guide.js  promise-cancel.js  promise.js  prototype.js  setTimeout0.js  wx.py
python/: Pipfile  aoro.py  coro.py  db_util.py  login.py  payment.py  stock.py
sicp/: the-little-scheme.rkt  tls.rkt
tcpl/: 1-10.c  1-12-count.c  1-12.c  1-13-2.c  1-13.c  1-14-power.c  1-14.c  1-15.c  1-16-0.c  1-16.c  1-17.c  1-18-0.c  1-18.c  1-19.c  1-2-f2c.c  1-2-fc.c  1-2.c  1-20-0.c  1-20.c  1-21.c  1-22.c  1-3.c  1-4.c  1-5.c  1-6.c  1-7-wc.c  1-8.c  1-9.c  2-1.c  2-4.c  CMakeLists.txt  arr.c  atoi.c  demo.c  f2c2.c  file.c  lc.c  longestline.c  longestline0.c  pointer.c  (+6 more)
tcpl/ch02/: 2-1.c  2-10.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-7.c  2-8.c  2-9.c  CMakeLists.txt  atoi.c  bitcount.c  getbits.c  lower.c  squeeze.c  strcat.c
tcpl/ch03/: 3-1.c  3-2.c  3-3.c  3-4.c  3-5.c  CMakeLists.txt  atoi.c  count.c  reverse.c  shellsort.c
tcpl/ch04/: printd.c  qsort.c
tcpl/ch05/: CMakeLists.txt  alloc.c  getint.c  p2i.c  sort0.c  strcmp.c  strcpy.c  strlen.c
tcpl/ch08/: CMakeLists.txt  fopen.c
tcpl/practice/: CMakeLists.txt  iter.c  oop.c  p2f.c
tcpl/socket/: CMakeLists.txt  broadcaster.c  client.c  ip.c  listener.c  poll.c  pollserver.c  select.c  selectserver.c  server.c  showip.c  talker.c
viber-blog/: package-lock.json
vue-press-blog-backup/: 404.html  config.html  index.html
webpack-demo/: package-lock.json  package.json  webpack.config.js
(+2801 files in other folders)
