cmake_minimum_required(VERSION 3.17)
project(tcpl)
set(CMAKE_C_STANDARD 11)

add_subdirectory(ch02)
add_subdirectory(ch03)
add_subdirectory(ch04)
add_subdirectory(ch05)
add_subdirectory(ch08)
add_subdirectory(practice)
add_subdirectory(socket)

add_executable(HELLO hello.c)
add_executable(1-1.c 1-1.c)
add_executable(1-2.c 1-2.c)
add_executable(1-8.c 1-8.c)
add_executable(1-9.c 1-9.c)
add_executable(1-10.c 1-10.c)
add_executable(1-13.c 1-13.c)
add_executable(1-16.c 1-16.c)
add_executable(1-16-0.c 1-16-0.c)
add_executable(1-18-0.c 1-18-0.c)
add_executable(1-19.c 1-19.c)
add_executable(1-21.c 1-21.c)
